--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.470.0",
     "@aws-sdk/s3-request-presigner": "^3.470.0",
+    "@vercel/postgres": "^0.5.1",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "next": "14.0.4",
